# Eigen_for_Robotics

./: .gitignore  CMakeLists.txt  README.md  package.xml
examples/: 01_vector_and_quaternion.cpp  02_block_operation_and_tf.cpp  03_eigen_w_pcl.cpp  04_roll_pitch_yaw.cpp  05_pose_conversion.cpp  casting.cpp  main.cpp
include/: pose_conversion.h  utils.hpp
materials/: odom_poses.txt
src/: .main.cpp.swp  main.cpp  pose_conversion.cpp
src/utils/: pose_conversion.cpp  pose_conversion.h
